header dropdown z-index fix

--- a/packages/components-css/header/index.scss
+++ b/packages/components-css/header/index.scss
@@ -54,7 +54,7 @@
   padding-block-start: 1.5rem;
   position: absolute;
   width: 100%; /* stylelint-disable-line property-disallowed-list */
-  z-index: 1;
+  z-index: 10;
 
   &--small {
     width: auto; /* stylelint-disable-line property-disallowed-list */
